--- a/n-body problem.html
+++ b/n-body problem.html
@@ -1,69 +1,72 @@
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Basic UI</title>
-<style>
-	html, body {
-	  width: 100%;
-	  height: 100%;
-	  margin: 0px;
-	  border: 0;
-	  overflow: hidden; 
-	  display: block;  
-	}
-</style>
-<link rel="stylesheet" href="nbody.css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Basic UI</title>
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      border: 0;
+      overflow: hidden;
+      display: block;
+    }
+  </style>
+  <link rel="stylesheet" href="nbody.css" />
 
-<script src="../libs/jquery-3.4.1/jquery-3.4.1.min.js"></script>
-<script src="../libs/jquery-ui/jquery-ui.js"></script>
-<script src="../libs/three.js/three.js"></script>
-<script src="../libs/three.js/controls/OrbitControls.js"></script>
-<script src="../libs/three.js/controls/DragControls.js"></script>
+  <script src="../libs/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+  <script src="../libs/jquery-ui/jquery-ui.js"></script>
+  <script src="../libs/three.js/three.js"></script>
+  <script src="../libs/three.js/controls/OrbitControls.js"></script>
+  <script src="../libs/three.js/controls/DragControls.js"></script>
+  <script src="odex.js"></script>
+  <script src="config.js"></script>
+  <script type="text/javascript">
 
-<script src="config.js"></script>
-<script type="text/javascript">
-  
-	$(document).ready(
-			function() {
+    $(document).ready(
+      function () {
 
-				let canvas = document.getElementById("webglcanvas");
+        let canvas = document.getElementById("webglcanvas");
 
-				// create the scene
-				createScene(canvas);
+        // create the scene
+        createScene(canvas);
 
-				// initialize the controls
-				//initControls();
-				
-		        // Run the run loop
-		        run();
-			}
-	);
+        // initialize the controls
+        //initControls();
 
-</script>
+        // Run the run loop
+        run();
+      }
+    );
+
+  </script>
 
 </head>
+
 <body>
 
-<div id="container">
+  <div id="container">
     <canvas id="webglcanvas" width=800 height=600></canvas>
-	<div id="title">
-		N-Body UI
-	</div>
-	<div id="prompt">
-		Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
-	</div>
-</div>
+    <div id="title">
+      N-Body UI
+    </div>
+    <div id="prompt">
+      Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
+    </div>
+  </div>
 
-<div id="properties">
-	<!--
+  <div id="properties">
+    <!--
 	<div id="directional" class="colorSelector">Directional<div style="background-color: #aaaaaa"></div></div>
 	<div id="spot" class="colorSelector">Spot<div style="background-color: #aaaaaa"></div></div>
 	<div id="ambient" class="colorSelector">Ambient<div style="background-color: #aaaaaa"></div></div>
 	<div id="durationLabel">Duration</div>
 	<div class="slider" id="durationSlider"></div>
 	<div id="durationValue">5s</div>-->
-	
-</div>
+
+  </div>
 
 
 </html>
