Added cyclic initial conditions.

--- a/n-body problem.html
+++ b/n-body problem.html
@@ -30,6 +30,8 @@
     <div id="prompt">
       Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
     </div>
+    <button id="simulate" disabled>Simulate</button>
   </div>
+</body>
 
 </html>
