--- a/n-body problem.html
+++ b/n-body problem.html
@@ -31,9 +31,16 @@
       Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
     </div>
     <div class="ui-button2">
-      <input type="text" id="x_input" placeholder="x" size="5">
-      <input type="text" id="y_input" placeholder="y" size="5">
-      <input type="text" id="z_input" placeholder="z" size="5">
+      <input type="text" id="mass" placeholder="mass" size="5">
+      <br>
+      <input type="text" id="rx" placeholder="rx" size="5">
+      <input type="text" id="ry" placeholder="ry" size="5">
+      <input type="text" id="rz" placeholder="rz" size="5">
+      <br>
+      <input type="text" id="vx" placeholder="vx" size="5">
+      <input type="text" id="vy" placeholder="vy" size="5">
+      <input type="text" id="vz" placeholder="vz" size="5">
+
       <button id="addBody">Add body</button>
     </div>
     <div class="ui-button">
