Added reset button.

--- a/n-body problem.html
+++ b/n-body problem.html
@@ -46,7 +46,8 @@
     <div class="ui-button">
       <input type="checkbox" id="toggleArrows" name="checkbox" checked>
       <label for="toggleArrows">Show vectors</label>
-      <button id="simulate" disabled>Simulate</button>
+      <button id="simulate" disabled>Start</button>
+      <button id="reset" disabled>Reset</button>
 
       <button id="removeBody">Remove body</button>
     </div>
