--- a/n-body problem.html
+++ b/n-body problem.html
@@ -30,7 +30,7 @@
     <div id="prompt">
       Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
     </div>
-    <div class="ui-button2">
+    <div class="ui-button">
       <input type="text" id="mass" placeholder="mass" size="5">
       <br>
       <input type="text" id="rx" placeholder="rx" size="5">
@@ -43,6 +43,7 @@
 
       <button id="addBody">Add body</button>
     </div>
+    <!--
     <div class="ui-button">
       <input type="checkbox" id="toggleArrows" name="checkbox" checked>
       <label for="toggleArrows">Show vectors</label>
@@ -50,7 +51,7 @@
       <button id="reset" disabled>Reset</button>
 
       <button id="removeBody">Remove body</button>
-    </div>
+    </div>-->
   </div>
 </body>
 
