Correct some UX details.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>N Body Problem</title>
+  <title>n-body-simulation</title>
   <style>
     html,
     body {
@@ -14,9 +14,9 @@
       display: block;
     }
   </style>
-  <link rel="stylesheet" href="nbody.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
-  <script src="bundle.js"></script>
+  <script src="js/bundle.js"></script>
 
 </head>
 
@@ -25,7 +25,7 @@
   <div id="container">
     <canvas id="webglcanvas" width=800 height=600></canvas>
     <div id="title">
-      N-Body UI
+      n-body simulation
     </div>
     <div id="prompt">
       Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
