--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>n-body-simulation</title>
+  <title><i>n</i>-body-simulation</title>
   <style>
     html,
     body {
@@ -25,10 +25,10 @@
   <div id="container">
     <canvas id="webglcanvas" width=800 height=600></canvas>
     <div id="title">
-      n-body simulation
+      <i>n</i>-body simulation
     </div>
     <div id="prompt">
-      Drag the mouse to rotate the camera<br>Use the scroll wheel to zoom.
+      Drag the mouse to rotate the camera.<br>Use the scroll wheel to zoom.
     </div>
   </div>
 </body>
