--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title><i>n</i>-body-simulation</title>
+  <title>n-body-simulation</title>
   <style>
     html,
     body {
