--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <div id="title">
       <i>n</i>-body simulation
     </div>
-    <div id="prompt">
+    <div id="prompt-l">
       Drag the mouse to rotate the camera.<br>Use the scroll wheel to zoom.
+    </div>
+    <div id="prompt-r">
+      Code:
+      <a href="https://github.com/JorgeBarMza/n-body-simulation">
+        github.com/JorgeBarMza/n-body-simulation</a>
     </div>
   </div>
 </body>
