--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <i>n</i>-body simulation
     </div>
     <div id="prompt-l">
-      Drag the mouse to rotate the camera.<br>Use the scroll wheel to zoom.
+      Drag the mouse to rotate the camera.
+      <br>Use the scroll wheel to zoom.
+      <br>Click on a particle to focus the camera on it.
     </div>
     <div id="prompt-r">
       Code:
